update baby controller